--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.keywords }}">
-    <meta name='author' content='BlinkTrade'>
+    <meta name='author' content='Research UAV'>
     <meta name='revisit-after' content='5 days'>
 
 
-    <link rel="canonical"  href='https://blinktrade.com'>
+    <link rel="canonical"  href='https://reserachuav.com'>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/assets/img/favicon.ico">
 
