feat: finish changes

--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="{{ Site.keywords }}">
-    <meta name='author' content='BlinkTrade'>
+    <meta name='author' content='ResearchUAV'>
     <meta name='revisit-after' content='5 days'>
 
 
@@ -29,7 +29,7 @@
     <link href='//fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}/assets/css/blinktrade.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}{{ site.baseurl }}/assets/css/researchuav.css" media="all" />
 </head>
 <body>
 
