--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <meta name='revisit-after' content='5 days'>
 
 
-    <link rel="canonical"  href='https://reserachuav.com'>
+    <link rel="canonical"  href='https://researchuav.com'>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/assets/img/favicon.ico">
 
@@ -25,7 +25,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/owl.theme.default.css" type="text/css">
-    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/blinktrade.css" media="all" type="text/css" />
+    <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/researchuav.css" media="all" type="text/css" />
 
 </head>
 <body>
@@ -50,9 +50,9 @@
       <div class="video-container">
         <div class="video-overlay"></div>
         <div class="video-media">
-          <video autoplay loop class="fillWidth" poster="{{ site.url }}{{ site.baseurl }}/assets/img/bg-header2.jpg">
-            <source src="{{ site.url }}{{ site.baseurl }}/assets/video/blinktrade2.mp4" type="video/mp4" />
-            <source src="{{ site.url }}{{ site.baseurl }}/assets/video/blinktrade2.webm" type="video/webm" />
+          <video autoplay loop class="fillWidth" >
+            <source src="{{ site.url }}{{ site.baseurl }}/assets/video/uav.mp4" type="video/mp4" />
+            <source src="{{ site.url }}{{ site.baseurl }}/assets/video/uav.webm" type="video/webm" />
           </video>
         </div>
       </div>
