--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,7 @@
 <script data-cfasync="false" src="{{ site.url }}{{ site.baseurl }}/assets/js/bundle.min.js"></script>
 <script data-cfasync="false" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js" type="text/javascript"></script>
 <script data-cfasync="false" src="{{ site.url }}{{ site.baseurl }}/assets/js/plugins/map.js" type="text/javascript"></script>
+<script defer src="https://cloud.umami.is/script.js" data-website-id="18d8fb46-b859-4d57-9fc4-908a3820f34e"></script>
 
 <script data-cfasync="false" type="text/javascript">
       (function (i, s, o, g, r, a, m) {
