fix: typo `reserachuav.com` to `researchuav.tech`

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <meta name='revisit-after' content='5 days'>
 
 
-    <link rel="canonical"  href='https://researchuav.com'>
+    <link rel="canonical"  href='https://researchuav.tech'>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/assets/img/favicon.ico">
 
